@@ -152,9 +152,114 @@
   $ psql
   ```
 * You will be logged in and able to interact with the database management system right away.
-
+* Command prompt will look like this
+  ```
+  psql=#
+  ```
 * Exit out of the PostgreSQL prompt by typing:
   ```
   postgres=# \q
+  ```
+</details>
+
+<details>
+<summary>Sonarqube Installation</summary>
+  
+* First, create a user for SonarQube with the following command:
+  ```
+  $ sudo adduser sonar
+  ```
+* Next, download the latest version of SonarQube with the following command:
+  ```
+  $ wget https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-6.7.6.zip
+  ```
+* Once the download is completed, unzip the downloaded file with the following command:
+  ```
+  $ unzip sonarqube-6.7.6.zip
+  ```
+* Next, copy the extracted directory to the /opt with the following command:
+  ```
+  $ sudo cp -r sonarqube-6.7.6 /opt/sonarqube
+  ```
+* add onar user to the group
+  ```
+  $ sudo groupadd sonar
+  $ sudo useradd -c "Sonar System User" -d /opt/sonarqube -g sonar -s /bin/bash sonar
+  $ sudo chown -R sonar:sonar /opt/sonarqube
+  ```
+* Next, you will need to configure SonarQube to run as a sonar user. You can do this with the following command:
+  ```
+  $ sudo nano /opt/sonarqube/bin/linux-x86-64/sonar.sh
+  ```
+* Make the following changes:
+  ```
+  RUN_AS_USER=sonar
+  ```
+* Save and close the file. Then, open SonarQube default configuration file and modify the database credentials with the one we created earlier:
+  ```
+  $ sudo nano /opt/sonarqube/conf/sonar.properties
+  ```
+* Make the following changes:
+  ```
+  sonar.jdbc.username=sonar
+  sonar.jdbc.password=password
+  sonar.jdbc.url=jdbc:postgresql://localhost/sonar
+  sonar.web.host=127.0.0.1
+  sonar.search.javaOpts=-Xms512m  -Xmx512m
+  ```
+* Save and close the file, when you are finished.
+* 
+  **Create Systemd Service file for SonarQube**
+* Next, you will need to create a systemd service file to manage SonarQube service. You can do this with the following command:
+  ```
+  $ sudo nano /etc/systemd/system/sonar.service
+  ```
+* Add the following lines:
+  ```
+  [Unit]
+  Description=SonarQube service
+  After=syslog.target network.target
+
+  [Service]
+  Type=forking
+
+  ExecStart=/opt/sonarqube/bin/linux-x86-64/sonar.sh start
+  ExecStop=/opt/sonarqube/bin/linux-x86-64/sonar.sh stop
+
+  User=sonar
+  Group=sonar
+  Restart=always
+
+  [Install]
+  WantedBy=multi-user.target
+  ```
+* Save and close the file, when you are finished. Then, start SonarQube service and enable it to start on boot time with the following command:
+  ```
+  $ sudo systemctl start sonar
+  $ sudo systemctl enable sonar
+  ```
+* You can check the status of SonarQube service with the following command:
+  ```
+  $ sudo systemctl status sonar
+  ```
+* output
+  ```
+  ? sonar.service - SonarQube service
+   Loaded: loaded (/etc/systemd/system/sonar.service; disabled; vendor preset: enabled)
+   Active: active (running) since Sun 2018-12-02 13:55:34 UTC; 2min 52s ago
+  Process: 2339 ExecStart=/opt/sonarqube/bin/linux-x86-64/sonar.sh start (code=exited, status=0/SUCCESS)
+   Main PID: 2396 (wrapper)
+      Tasks: 133 (limit: 2323)
+     CGroup: /system.slice/sonar.service
+             ??2396 /opt/sonarqube/bin/linux-x86-64/./wrapper /opt/sonarqube/bin/linux-x86-64/../../conf/wrapper.conf wrapper.syslog.ident=SonarQ
+             ??2399 java -Dsonar.wrapped=true -Djava.awt.headless=true -Xms8m -Xmx32m -Djava.library.path=./lib -classpath ../../lib/jsw/wrapper-
+             ??2445 /usr/lib/jvm/java-8-oracle/jre/bin/java -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOc
+             ??2545 /usr/lib/jvm/java-8-oracle/jre/bin/java -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djava.io.tmpdir=/opt/sonarqube/temp -
+             ??2622 /usr/lib/jvm/java-8-oracle/jre/bin/java -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djava.io.tmpdir=/opt/sonarqube/temp -
+
+  Dec 02 13:55:33 ubuntu1804 systemd[1]: Starting SonarQube service...
+  Dec 02 13:55:33 ubuntu1804 sonar.sh[2339]: Starting SonarQube...
+  Dec 02 13:55:34 ubuntu1804 sonar.sh[2339]: Started SonarQube.
+  Dec 02 13:55:34 ubuntu1804 systemd[1]: Started SonarQube service.
   ```
 </details>
